[package]
name = "thrust"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Do we want to set up our own logger?
env_logger = "~0.7"
quicksilver = { version = "0.4.0-alpha0.2", default-features = false }
log = "~0.4"
specs = { version = "~0.16", features = ["specs-derive"] }
