[package]
name = "thrust"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "~0.99"
# TODO: Do we want to set up our own logger?
env_logger = "~0.7"
# TODO: Disable font/ttf once fixed.
quicksilver = { version = "0.4.0-alpha0.3", default-features = false, features = ["font", "ttf"] }
log = "~0.4"
shred = "~0.10"
specs = { version = "~0.16", features = ["specs-derive", "shred-derive"] }
specs-hierarchy = "~0.6"

[patch.crates-io]
shred = { git = "https://github.com/vorner/shred", branch = "batch-api-ergonomics" }
